FIXED double scroll bug due to the Grooveshark player

--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@ body {
 	background-color: silver;
 }
 
-body, body *, div.playlist object {
+body, body *, div.playlist object.grooveshark-player {
 	cursor: url('images/sword-cursor.png'), crosshair;
 	font-family: 'Electrolize', sans-serif;
 }
@@ -130,14 +130,13 @@ div.playlist div.collapse {
 	background-color: grey;
 }
 
-div.playlist object {
+div.playlist object.grooveshark-player {
 	position: absolute;
 	bottom: 0;
 }
 
-div.playlist object.down {
-	bottom: -145;
-	visibility: hidden;
+div.playlist object.grooveshark-player.down {
+	visibility: collapse;
 }
 
 div.playlist div.collapse.down {
